添加dialog工具类

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,6 +13,8 @@
     <color name="text_color">#606060</color>
     <color name="hint_text_color">#A5A5A5</color>
 
+    <color name="bg_white">#ffffff</color>
+
     <!-- QRCode scanner color begin -->
     <color name="viewfinder_mask">#60000000</color>
     <color name="result_view">#B0000000</color>
@@ -20,5 +22,7 @@
     <color name="result_point_color">#C0FFFF00</color>
     <color name="laser_color">#0F0</color>
     <color name="corner_color">#00FF00</color>
+
+    <color name="hor_line">#e1e1e1</color>
     <!-- QRCode scanner color end -->
 </resources>
