--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -41,10 +41,11 @@
 
     </RelativeLayout>
 
-    <TextView
+    <LinearLayout
+        android:orientation="vertical"
+        android:id="@+id/root"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="我的页面"
-        android:gravity="center"/>
+        android:layout_height="match_parent">
+    </LinearLayout>
 
 </LinearLayout>
