--- a/app/src/main/res/layout/activity_commonality.xml
+++ b/app/src/main/res/layout/activity_commonality.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -15,7 +16,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:src="@drawable/icon_back"
+            app:srcCompat="@drawable/icon_back"
             android:background="@null"
             android:padding="15dp"
             />
@@ -34,7 +35,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
-            android:src="@drawable/icon_share"
+            app:srcCompat="@drawable/icon_share"
             android:visibility="gone"
             android:background="@null"
             android:padding="15dp"
