--- a/app/src/main/res/layout/activity_spalsh.xml
+++ b/app/src/main/res/layout/activity_spalsh.xml
@@ -9,6 +9,6 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-       android:src="@drawable/icon_welcome2"/>
+       app:srcCompat="@drawable/icon_welcome2"/>
 
 </LinearLayout>
