--- a/app/src/main/res/layout/fragment_decoration.xml
+++ b/app/src/main/res/layout/fragment_decoration.xml
@@ -28,7 +28,7 @@
                 android:layout_width="15dp"
                 android:layout_height="15dp"
                 android:layout_centerVertical="true"
-                android:src="@drawable/icon_location"/>
+                app:srcCompat="@drawable/icon_location"/>
 
             <TextView
                 android:id="@+id/tv_location"
@@ -45,7 +45,7 @@
                 android:id="@+id/iv_share"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/icon_share"
+                app:srcCompat="@drawable/icon_share"
                 android:layout_centerVertical="true"
                 android:layout_alignParentRight="true"
                 android:layout_marginRight="15dp"/>
@@ -56,7 +56,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
         <com.yarolegovich.discretescrollview.DiscreteScrollView
             android:id="@+id/banner_rv"
@@ -65,5 +65,11 @@
             app:dsv_orientation="horizontal"/>
 
     </LinearLayout>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/tv_text"
+        android:text="测试"/>
 
 </LinearLayout>
