--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -39,7 +40,7 @@
                         android:layout_marginBottom="5dp"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
-                        android:src="@drawable/index_horn"/>
+                        app:srcCompat="@drawable/index_horn"/>
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -142,7 +143,7 @@
                     android:layout_weight="0.5"
                     android:layout_gravity="center_vertical"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/icon_search"/>
+                    app:srcCompat="@drawable/icon_search"/>
 
                 <TextView
                     android:gravity="center_vertical"
@@ -160,7 +161,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_marginRight="10dp"
-                    android:src="@drawable/code"/>
+                    app:srcCompat="@drawable/code"/>
             </LinearLayout>
         </LinearLayout>
 
