添加工具类

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -30,6 +30,7 @@
                     android:layout_height="200dp" />
 
                 <RelativeLayout
+                    android:background="@color/bg_white"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
@@ -64,47 +65,14 @@
 
                 </RelativeLayout>
 
+                <android.support.v7.widget.RecyclerView
+                    android:layout_marginTop="6dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:id="@+id/rlv">
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="80dp"
-                    android:text="主页面"
-                    android:gravity="center"/>
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="80dp"
-                    android:text="主页面"
-                    android:gravity="center"/>
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="80dp"
-                    android:text="主页面"
-                    android:gravity="center"/>
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="80dp"
-                    android:text="主页面"
-                    android:gravity="center"/>
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="80dp"
-                    android:text="主页面"
-                    android:gravity="center"/>
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="80dp"
-                    android:text="主页面"
-                    android:gravity="center"/>
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="80dp"
-                    android:text="主页面"
-                    android:gravity="center"/>
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="80dp"
-                    android:text="主页面"
-                    android:gravity="center"/>
+                </android.support.v7.widget.RecyclerView>
+
             </LinearLayout>
         </android.support.v4.widget.NestedScrollView>
 
