--- a/app/src/main/res/layout/activity_commonality.xml
+++ b/app/src/main/res/layout/activity_commonality.xml
@@ -42,6 +42,15 @@
             />
     </RelativeLayout>
 
+    <ProgressBar
+        android:id="@+id/progressbar"
+        style="@android:style/Widget.ProgressBar.Horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="3dip"
+        android:max="100"
+        android:progress="0"
+        android:visibility="gone"/>
+
     <WebView
         android:id="@+id/wv_content"
         android:layout_width="match_parent"
