--- a/app/src/main/res/layout/fragment_find.xml
+++ b/app/src/main/res/layout/fragment_find.xml
@@ -133,4 +133,11 @@
             android:background="#E2E2E2" />
     </LinearLayout>
 
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/find_fl">
+
+    </FrameLayout>
+
 </LinearLayout>
