--- a/app/src/main/res/layout/fragment_decoration.xml
+++ b/app/src/main/res/layout/fragment_decoration.xml
@@ -66,4 +66,10 @@
 
     </LinearLayout>
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/tv_text"
+        android:text="测试"/>
+
 </LinearLayout>
