--- a/app/src/main/res/layout/item_new_girls.xml
+++ b/app/src/main/res/layout/item_new_girls.xml
@@ -6,11 +6,11 @@
     android:layout_height="wrap_content"
     android:padding="1dp">
 
-    <ImageView
+    <com.zzmfaster.myapplication.custom.ScaleImageView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/iv_girls"
-        android:scaleType="centerCrop"
+        android:scaleType="fitXY"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintStart_toStartOf="parent"/>
 
