--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -102,7 +102,7 @@
         <RelativeLayout
             android:id="@+id/rl_test"
             android:layout_width="match_parent"
-            android:layout_height="50dp">
+            android:layout_height="40dp">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -113,6 +113,22 @@
                 android:layout_centerVertical="true"/>
 
         </RelativeLayout>
+        <RelativeLayout
+            android:id="@+id/rl_test_one"
+            android:layout_width="match_parent"
+            android:layout_height="40dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="第三方登陆"
+                android:textSize="20sp"
+                android:layout_marginLeft="15dp"
+                android:layout_centerVertical="true"/>
+
+        </RelativeLayout>
+
+
 
     </LinearLayout>
 
