recyclerview添加预览效果

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <com.scwang.smartrefresh.layout.SmartRefreshLayout
         android:id="@+id/srfl"
@@ -80,7 +81,8 @@
                     android:layout_marginTop="6dp"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:id="@+id/rlv">
+                    android:id="@+id/rlv"
+                    tools:listitem="@layout/item_movie">
 
                 </android.support.v7.widget.RecyclerView>
 
