--- a/app/src/main/res/layout/item_movie.xml
+++ b/app/src/main/res/layout/item_movie.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/linearLayout"
     android:layout_marginTop="6dp"
     android:layout_width="match_parent"
@@ -31,7 +32,7 @@
             android:layout_height="wrap_content"
             android:layout_toRightOf="@id/iv_image"
             android:textSize="14dp"
-            android:text="标题"
+            tools:text="标题"
             android:layout_marginLeft="6dp"
             android:id="@+id/tv_title"/>
 
@@ -62,14 +63,14 @@
                     android:layout_height="wrap_content"
                     android:textSize="14dp"
                     android:textColor="@color/result_view"
-                    android:text="导演: "/>
+                    tools:text="导演: "/>
 
                 <TextView
                     android:id="@+id/tv_director"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="14dp"
-                    android:text="内容"/>
+                    tools:text="内容"/>
 
             </LinearLayout>
 
@@ -88,7 +89,7 @@
                     android:layout_height="wrap_content"
                     android:textSize="14dp"
                     android:textColor="@color/result_view"
-                    android:text="演员: "/>
+                    tools:text="演员: "/>
 
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/recyclerview_yanyuan"
@@ -118,14 +119,14 @@
                     android:layout_height="wrap_content"
                     android:textSize="14dp"
                     android:textColor="@color/result_view"
-                    android:text="时间: "/>
+                    tools:text="时间: "/>
 
                 <TextView
                     android:id="@+id/tv_time"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="14dp"
-                    android:text="内容"/>
+                    tools:text="内容"/>
 
             </LinearLayout>
 
