--- a/app/src/main/res/layout/fragment_decoration.xml
+++ b/app/src/main/res/layout/fragment_decoration.xml
@@ -80,4 +80,15 @@
         android:background="@null"
         android:hint="请输入金额"/>
 
+    <TextView
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:background="@android:color/holo_blue_light"
+        android:ellipsize="marquee"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
+        android:marqueeRepeatLimit="marquee_forever"
+        android:singleLine="true"
+        android:text="@string/skid_activty_2_text" />
+
 </LinearLayout>
