--- a/app/src/main/res/layout/activity_three_login.xml
+++ b/app/src/main/res/layout/activity_three_login.xml
@@ -1,66 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    xmlns:tools="http://schemas.android.com/tools">
-
-    <RelativeLayout
-        android:layout_marginTop="20dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <TextView
-            android:id="@+id/tv_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            tools:text="授权姓名"
-            android:layout_centerHorizontal="true"
-            android:padding="10dp"/>
-
-        <TextView
-            android:layout_marginTop="15dp"
-            android:id="@+id/tv_city"
-            android:layout_below="@id/tv_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            tools:text="授权城市"
-            android:layout_centerInParent="true"
-            android:padding="10dp"/>
-
-    </RelativeLayout>
+    android:layout_height="match_parent">
 
     <LinearLayout
-        android:layout_marginTop="30dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/tv_qq"
-            android:drawableTop="@drawable/ic_share_qq"
-            android:layout_width="0dp"
-            android:layout_weight="1"
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/tv_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:padding="10dp"
+                android:text="授权姓名" />
+
+            <TextView
+                android:id="@+id/tv_city"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/tv_name"
+                android:layout_centerInParent="true"
+                android:layout_marginTop="15dp"
+                android:padding="10dp"
+                android:text="授权城市" />
+
+        </RelativeLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="QQ登录"
-            android:textSize="14sp"
-            android:textColor="#000"
-            android:gravity="center_horizontal"
-            android:padding="15dp"/>
-        <TextView
-            android:id="@+id/tv_wechat"
-            android:drawableTop="@drawable/ic_share_wechat"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="wrap_content"
-            android:text="微信登录"
-            android:textSize="14sp"
-            android:textColor="#000"
-            android:gravity="center_horizontal"
-            android:padding="15dp"/>
+            android:layout_marginTop="30dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/tv_qq"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:drawableTop="@drawable/ic_share_qq"
+                android:gravity="center_horizontal"
+                android:padding="15dp"
+                android:text="QQ登录"
+                android:textColor="#000"
+                android:textSize="14sp" />
+
+            <TextView
+                android:id="@+id/tv_wechat"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:drawableTop="@drawable/ic_share_wechat"
+                android:gravity="center_horizontal"
+                android:padding="15dp"
+                android:text="微信登录"
+                android:textColor="#000"
+                android:textSize="14sp" />
+
+
+        </LinearLayout>
 
 
     </LinearLayout>
-
-
 </LinearLayout>
